crates/reinhardt-pages/tests/ui/page/fail/invalid_for_pattern.stderr
error: expected `in`
  --> tests/ui/page/fail/invalid_for_pattern.rs:10:3
   |
10 |         items {
   |         ^^^^^
